--- a/map2map/models/test.ipynb
+++ b/map2map/models/test.ipynb
@@ -167,105 +167,304 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Generator(\n",
+       "  (block0): ConvStyled3d(\n",
+       "    (style_block): Sequential(\n",
+       "      (0): Linear(in_features=1, out_features=6, bias=True)\n",
+       "    )\n",
+       "  )\n",
+       "  (act): LeakyReLUStyled(negative_slope=0.2, inplace=True)\n",
+       "  (addnoise): AddNoise()\n",
+       "  (hblock0): HBlock(\n",
+       "    (act): LeakyReLUStyled(negative_slope=0.2, inplace=True)\n",
+       "    (upsample): Resampler()\n",
+       "    (conv1): ConvStyled3d(\n",
+       "      (style_block): Sequential(\n",
+       "        (0): Linear(in_features=1, out_features=512, bias=True)\n",
+       "      )\n",
+       "    )\n",
+       "    (addnoise1): AddNoise()\n",
+       "    (conv2): ConvStyled3d(\n",
+       "      (style_block): Sequential(\n",
+       "        (0): Linear(in_features=1, out_features=256, bias=True)\n",
+       "      )\n",
+       "    )\n",
+       "    (addnoise2): AddNoise()\n",
+       "    (proj): ConvStyled3d(\n",
+       "      (style_block): Sequential(\n",
+       "        (0): Linear(in_features=1, out_features=256, bias=True)\n",
+       "      )\n",
+       "    )\n",
+       "    (noise_proj1): ConvStyled3d(\n",
+       "      (style_block): Sequential(\n",
+       "        (0): Linear(in_features=1, out_features=6, bias=True)\n",
+       "      )\n",
+       "    )\n",
+       "    (noise_proj2): ConvStyled3d(\n",
+       "      (style_block): Sequential(\n",
+       "        (0): Linear(in_features=1, out_features=6, bias=True)\n",
+       "      )\n",
+       "    )\n",
+       "  )\n",
+       "  (hblock1): HBlock(\n",
+       "    (act): LeakyReLUStyled(negative_slope=0.2, inplace=True)\n",
+       "    (upsample): Resampler()\n",
+       "    (conv1): ConvStyled3d(\n",
+       "      (style_block): Sequential(\n",
+       "        (0): Linear(in_features=1, out_features=256, bias=True)\n",
+       "      )\n",
+       "    )\n",
+       "    (addnoise1): AddNoise()\n",
+       "    (conv2): ConvStyled3d(\n",
+       "      (style_block): Sequential(\n",
+       "        (0): Linear(in_features=1, out_features=128, bias=True)\n",
+       "      )\n",
+       "    )\n",
+       "    (addnoise2): AddNoise()\n",
+       "    (proj): ConvStyled3d(\n",
+       "      (style_block): Sequential(\n",
+       "        (0): Linear(in_features=1, out_features=128, bias=True)\n",
+       "      )\n",
+       "    )\n",
+       "    (noise_proj1): ConvStyled3d(\n",
+       "      (style_block): Sequential(\n",
+       "        (0): Linear(in_features=1, out_features=6, bias=True)\n",
+       "      )\n",
+       "    )\n",
+       "    (noise_proj2): ConvStyled3d(\n",
+       "      (style_block): Sequential(\n",
+       "        (0): Linear(in_features=1, out_features=6, bias=True)\n",
+       "      )\n",
+       "    )\n",
+       "  )\n",
+       "  (hblock2): HBlock(\n",
+       "    (act): LeakyReLUStyled(negative_slope=0.2, inplace=True)\n",
+       "    (upsample): Resampler()\n",
+       "    (conv1): ConvStyled3d(\n",
+       "      (style_block): Sequential(\n",
+       "        (0): Linear(in_features=1, out_features=128, bias=True)\n",
+       "      )\n",
+       "    )\n",
+       "    (addnoise1): AddNoise()\n",
+       "    (conv2): ConvStyled3d(\n",
+       "      (style_block): Sequential(\n",
+       "        (0): Linear(in_features=1, out_features=64, bias=True)\n",
+       "      )\n",
+       "    )\n",
+       "    (addnoise2): AddNoise()\n",
+       "    (proj): ConvStyled3d(\n",
+       "      (style_block): Sequential(\n",
+       "        (0): Linear(in_features=1, out_features=64, bias=True)\n",
+       "      )\n",
+       "    )\n",
+       "    (noise_proj1): ConvStyled3d(\n",
+       "      (style_block): Sequential(\n",
+       "        (0): Linear(in_features=1, out_features=6, bias=True)\n",
+       "      )\n",
+       "    )\n",
+       "    (noise_proj2): ConvStyled3d(\n",
+       "      (style_block): Sequential(\n",
+       "        (0): Linear(in_features=1, out_features=6, bias=True)\n",
+       "      )\n",
+       "    )\n",
+       "  )\n",
+       "  (noise_proj): ConvStyled3d(\n",
+       "    (style_block): Sequential(\n",
+       "      (0): Linear(in_features=1, out_features=6, bias=True)\n",
+       "    )\n",
+       "  )\n",
+       ")"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "from torchinfo import summary"
+    "G.cuda()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "input_size = 24\n",
+    "padding = 3\n",
+    "N = input_size + 2 * padding\n",
+    "noise_padding = 4\n",
+    "noise0_N = input_size*2 + 2 * noise_padding\n",
+    "noise1_N = input_size*4 + 2 * noise_padding\n",
+    "noise2_N = input_size*8 + 2 * noise_padding"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input = torch.randn(1, 6, N, N, N).cuda()\n",
+    "style = torch.randn(1, 1).cuda()\n",
+    "early_noise = torch.randn(1, 6, N, N, N).cuda()\n",
+    "noise0 = torch.randn(1, 6, noise0_N, noise0_N, noise0_N).cuda()\n",
+    "noise1 = torch.randn(1, 6, noise1_N, noise1_N, noise1_N).cuda()\n",
+    "noise2 = torch.randn(1, 6, noise2_N, noise2_N, noise2_N).cuda()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "out = G(input, style, early_noise, noise0, noise1, noise2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "==========================================================================================\n",
-       "Layer (type:depth-idx)                   Output Shape              Param #\n",
-       "==========================================================================================\n",
-       "Generator                                --                        --\n",
-       "├─ConvStyled3d: 1-1                      [1, 512, 22, 22, 22]      --\n",
-       "│    └─Sequential: 2-1                   [1, 6]                    --\n",
-       "│    │    └─Linear: 3-1                  [1, 6]                    12\n",
-       "├─LeakyReLUStyled: 1-2                   [1, 512, 22, 22, 22]      --\n",
-       "├─ConvStyled3d: 1-3                      [1, 512, 22, 22, 22]      --\n",
-       "│    └─Sequential: 2-2                   [1, 6]                    --\n",
-       "│    │    └─Linear: 3-2                  [1, 6]                    12\n",
-       "├─AddNoise: 1-4                          [1, 512, 22, 22, 22]      512\n",
-       "├─HBlock: 1-5                            [1, 256, 38, 38, 38]      --\n",
-       "│    └─Resampler: 2-3                    [1, 512, 42, 42, 42]      --\n",
-       "│    └─ConvStyled3d: 2-4                 [1, 256, 40, 40, 40]      --\n",
-       "│    │    └─Sequential: 3-3              [1, 512]                  1,024\n",
-       "│    └─LeakyReLUStyled: 2-5              [1, 256, 40, 40, 40]      --\n",
-       "│    └─ConvStyled3d: 2-6                 [1, 256, 40, 40, 40]      --\n",
-       "│    │    └─Sequential: 3-4              [1, 6]                    12\n",
-       "│    └─AddNoise: 2-7                     [1, 256, 40, 40, 40]      256\n",
-       "│    └─ConvStyled3d: 2-8                 [1, 256, 38, 38, 38]      --\n",
-       "│    │    └─Sequential: 3-5              [1, 256]                  512\n",
-       "│    └─LeakyReLUStyled: 2-9              [1, 256, 38, 38, 38]      --\n",
-       "│    └─ConvStyled3d: 2-10                [1, 256, 38, 38, 38]      --\n",
-       "│    │    └─Sequential: 3-6              [1, 6]                    12\n",
-       "│    └─AddNoise: 2-11                    [1, 256, 38, 38, 38]      256\n",
-       "│    └─Resampler: 2-12                   [1, 6, 42, 42, 42]        --\n",
-       "│    └─ConvStyled3d: 2-13                [1, 6, 38, 38, 38]        --\n",
-       "│    │    └─Sequential: 3-7              [1, 256]                  512\n",
-       "│    └─LeakyReLUStyled: 2-14             [1, 6, 38, 38, 38]        --\n",
-       "├─HBlock: 1-6                            [1, 128, 70, 70, 70]      --\n",
-       "│    └─Resampler: 2-15                   [1, 256, 74, 74, 74]      --\n",
-       "│    └─ConvStyled3d: 2-16                [1, 128, 72, 72, 72]      --\n",
-       "│    │    └─Sequential: 3-8              [1, 256]                  512\n",
-       "│    └─LeakyReLUStyled: 2-17             [1, 128, 72, 72, 72]      --\n",
-       "│    └─ConvStyled3d: 2-18                [1, 128, 72, 72, 72]      --\n",
-       "│    │    └─Sequential: 3-9              [1, 6]                    12\n",
-       "│    └─AddNoise: 2-19                    [1, 128, 72, 72, 72]      128\n",
-       "│    └─ConvStyled3d: 2-20                [1, 128, 70, 70, 70]      --\n",
-       "│    │    └─Sequential: 3-10             [1, 128]                  256\n",
-       "│    └─LeakyReLUStyled: 2-21             [1, 128, 70, 70, 70]      --\n",
-       "│    └─ConvStyled3d: 2-22                [1, 128, 70, 70, 70]      --\n",
-       "│    │    └─Sequential: 3-11             [1, 6]                    12\n",
-       "│    └─AddNoise: 2-23                    [1, 128, 70, 70, 70]      128\n",
-       "│    └─Resampler: 2-24                   [1, 6, 74, 74, 74]        --\n",
-       "│    └─ConvStyled3d: 2-25                [1, 6, 70, 70, 70]        --\n",
-       "│    │    └─Sequential: 3-12             [1, 128]                  256\n",
-       "│    └─LeakyReLUStyled: 2-26             [1, 6, 70, 70, 70]        --\n",
-       "├─HBlock: 1-7                            [1, 64, 134, 134, 134]    --\n",
-       "│    └─Resampler: 2-27                   [1, 128, 138, 138, 138]   --\n",
-       "│    └─ConvStyled3d: 2-28                [1, 64, 136, 136, 136]    --\n",
-       "│    │    └─Sequential: 3-13             [1, 128]                  256\n",
-       "│    └─LeakyReLUStyled: 2-29             [1, 64, 136, 136, 136]    --\n",
-       "│    └─ConvStyled3d: 2-30                [1, 64, 136, 136, 136]    --\n",
-       "│    │    └─Sequential: 3-14             [1, 6]                    12\n",
-       "│    └─AddNoise: 2-31                    [1, 64, 136, 136, 136]    64\n",
-       "│    └─ConvStyled3d: 2-32                [1, 64, 134, 134, 134]    --\n",
-       "│    │    └─Sequential: 3-15             [1, 64]                   128\n",
-       "│    └─LeakyReLUStyled: 2-33             [1, 64, 134, 134, 134]    --\n",
-       "│    └─ConvStyled3d: 2-34                [1, 64, 134, 134, 134]    --\n",
-       "│    │    └─Sequential: 3-16             [1, 6]                    12\n",
-       "│    └─AddNoise: 2-35                    [1, 64, 134, 134, 134]    64\n",
-       "│    └─Resampler: 2-36                   [1, 6, 138, 138, 138]     --\n",
-       "│    └─ConvStyled3d: 2-37                [1, 6, 134, 134, 134]     --\n",
-       "│    │    └─Sequential: 3-17             [1, 64]                   128\n",
-       "│    └─LeakyReLUStyled: 2-38             [1, 6, 134, 134, 134]     --\n",
-       "==========================================================================================\n",
-       "Total params: 5,088\n",
-       "Trainable params: 5,088\n",
-       "Non-trainable params: 0\n",
-       "Total mult-adds (M): 0.00\n",
-       "==========================================================================================\n",
-       "Input size (MB): 138.67\n",
-       "Forward/backward pass size (MB): 3540.36\n",
-       "Params size (MB): 0.02\n",
-       "Estimated Total Size (MB): 3679.05\n",
-       "=========================================================================================="
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "|===========================================================================|\n",
+      "|                  PyTorch CUDA memory summary, device ID 0                 |\n",
+      "|---------------------------------------------------------------------------|\n",
+      "|            CUDA OOMs: 0            |        cudaMalloc retries: 0         |\n",
+      "|===========================================================================|\n",
+      "|        Metric         | Cur Usage  | Peak Usage | Tot Alloc  | Tot Freed  |\n",
+      "|---------------------------------------------------------------------------|\n",
+      "| Allocated memory      |   22309 MB |   23874 MB |   43255 MB |   20945 MB |\n",
+      "|       from large pool |   22304 MB |   23869 MB |   43246 MB |   20942 MB |\n",
+      "|       from small pool |       5 MB |       5 MB |       8 MB |       3 MB |\n",
+      "|---------------------------------------------------------------------------|\n",
+      "| Active memory         |   22309 MB |   23874 MB |   43255 MB |   20945 MB |\n",
+      "|       from large pool |   22304 MB |   23869 MB |   43246 MB |   20942 MB |\n",
+      "|       from small pool |       5 MB |       5 MB |       8 MB |       3 MB |\n",
+      "|---------------------------------------------------------------------------|\n",
+      "| GPU reserved memory   |   25956 MB |   25956 MB |   25956 MB |       0 B  |\n",
+      "|       from large pool |   25950 MB |   25950 MB |   25950 MB |       0 B  |\n",
+      "|       from small pool |       6 MB |       6 MB |       6 MB |       0 B  |\n",
+      "|---------------------------------------------------------------------------|\n",
+      "| Non-releasable memory |  373239 KB |    4486 MB |   12593 MB |   12228 MB |\n",
+      "|       from large pool |  372483 KB |    4485 MB |   12585 MB |   12221 MB |\n",
+      "|       from small pool |     755 KB |       1 MB |       7 MB |       7 MB |\n",
+      "|---------------------------------------------------------------------------|\n",
+      "| Allocations           |     176    |     178    |     262    |      86    |\n",
+      "|       from large pool |      42    |      44    |      79    |      37    |\n",
+      "|       from small pool |     134    |     134    |     183    |      49    |\n",
+      "|---------------------------------------------------------------------------|\n",
+      "| Active allocs         |     176    |     178    |     262    |      86    |\n",
+      "|       from large pool |      42    |      44    |      79    |      37    |\n",
+      "|       from small pool |     134    |     134    |     183    |      49    |\n",
+      "|---------------------------------------------------------------------------|\n",
+      "| GPU reserved segments |      31    |      31    |      31    |       0    |\n",
+      "|       from large pool |      28    |      28    |      28    |       0    |\n",
+      "|       from small pool |       3    |       3    |       3    |       0    |\n",
+      "|---------------------------------------------------------------------------|\n",
+      "| Non-releasable allocs |      13    |      16    |      58    |      45    |\n",
+      "|       from large pool |      10    |      13    |      29    |      19    |\n",
+      "|       from small pool |       3    |       3    |      29    |      26    |\n",
+      "|---------------------------------------------------------------------------|\n",
+      "| Oversize allocations  |       0    |       0    |       0    |       0    |\n",
+      "|---------------------------------------------------------------------------|\n",
+      "| Oversize GPU segments |       0    |       0    |       0    |       0    |\n",
+      "|===========================================================================|\n",
+      "\n"
+     ]
     }
    ],
    "source": [
-    "summary(G, [(1 ,6, 22, 22, 22), (1, 1), (1, 6, 22, 22, 22), (1, 6, 40, 40, 40), (1, 6, 38, 38, 38), (1, 6, 72, 72, 72), (1, 6, 70, 70, 70), (1, 6, 136, 136, 136), (1, 6, 134, 134, 134)])"
+    "print(torch.cuda.memory_summary())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "25033991680\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(torch.cuda.max_memory_allocated())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Thu Jun  8 14:56:24 2023       \n",
+      "+-----------------------------------------------------------------------------+\n",
+      "| NVIDIA-SMI 470.57.02    Driver Version: 470.57.02    CUDA Version: 11.4     |\n",
+      "|-------------------------------+----------------------+----------------------+\n",
+      "| GPU  Name        Persistence-M| Bus-Id        Disp.A | Volatile Uncorr. ECC |\n",
+      "| Fan  Temp  Perf  Pwr:Usage/Cap|         Memory-Usage | GPU-Util  Compute M. |\n",
+      "|                               |                      |               MIG M. |\n",
+      "|===============================+======================+======================|\n",
+      "|   0  NVIDIA A100-SXM...  On   | 00000000:01:00.0 Off |                    0 |\n",
+      "| N/A   30C    P0    67W / 400W |  27870MiB / 40536MiB |     52%      Default |\n",
+      "|                               |                      |             Disabled |\n",
+      "+-------------------------------+----------------------+----------------------+\n",
+      "                                                                               \n",
+      "+-----------------------------------------------------------------------------+\n",
+      "| Processes:                                                                  |\n",
+      "|  GPU   GI   CI        PID   Type   Process name                  GPU Memory |\n",
+      "|        ID   ID                                                   Usage      |\n",
+      "|=============================================================================|\n",
+      "|    0   N/A  N/A   1468901      C   ...da3/envs/torch/bin/python    27867MiB |\n",
+      "+-----------------------------------------------------------------------------+\n"
+     ]
+    }
+   ],
+   "source": [
+    "!nvidia-smi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "loss = out.sum()\n",
+    "loss.backward()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "27884080128\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(torch.cuda.max_memory_allocated())"
    ]
   },
   {
