current working version on TWIG

--- a/map2map/models/test.ipynb
+++ b/map2map/models/test.ipynb
@@ -2,25 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/hildafs/projects/phy200018p/xzhangn/source/anaconda3/envs/torch/lib/python3.7/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import torch"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +145,7 @@
        ")"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -303,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -324,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -345,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -364,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -459,7 +450,7 @@
        "6989426"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -470,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -536,7 +527,7 @@
        "6979422"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -547,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -562,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -576,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -585,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -599,37 +590,37 @@
       "|===========================================================================|\n",
       "|        Metric         | Cur Usage  | Peak Usage | Tot Alloc  | Tot Freed  |\n",
       "|---------------------------------------------------------------------------|\n",
-      "| Allocated memory      |   22309 MB |   23874 MB |   43255 MB |   20945 MB |\n",
-      "|       from large pool |   22304 MB |   23869 MB |   43246 MB |   20942 MB |\n",
-      "|       from small pool |       5 MB |       5 MB |       8 MB |       3 MB |\n",
+      "| Allocated memory      |   22525 MB |   24090 MB |   43524 MB |   20999 MB |\n",
+      "|       from large pool |   22505 MB |   24070 MB |   43499 MB |   20993 MB |\n",
+      "|       from small pool |      19 MB |      19 MB |      25 MB |       5 MB |\n",
       "|---------------------------------------------------------------------------|\n",
-      "| Active memory         |   22309 MB |   23874 MB |   43255 MB |   20945 MB |\n",
-      "|       from large pool |   22304 MB |   23869 MB |   43246 MB |   20942 MB |\n",
-      "|       from small pool |       5 MB |       5 MB |       8 MB |       3 MB |\n",
+      "| Active memory         |   22525 MB |   24090 MB |   43524 MB |   20999 MB |\n",
+      "|       from large pool |   22505 MB |   24070 MB |   43499 MB |   20993 MB |\n",
+      "|       from small pool |      19 MB |      19 MB |      25 MB |       5 MB |\n",
       "|---------------------------------------------------------------------------|\n",
-      "| GPU reserved memory   |   25956 MB |   25956 MB |   25956 MB |       0 B  |\n",
-      "|       from large pool |   25950 MB |   25950 MB |   25950 MB |       0 B  |\n",
-      "|       from small pool |       6 MB |       6 MB |       6 MB |       0 B  |\n",
+      "| GPU reserved memory   |   26204 MB |   26204 MB |   26204 MB |       0 B  |\n",
+      "|       from large pool |   26182 MB |   26182 MB |   26182 MB |       0 B  |\n",
+      "|       from small pool |      22 MB |      22 MB |      22 MB |       0 B  |\n",
       "|---------------------------------------------------------------------------|\n",
-      "| Non-releasable memory |  373239 KB |    4486 MB |   12593 MB |   12228 MB |\n",
-      "|       from large pool |  372483 KB |    4485 MB |   12585 MB |   12221 MB |\n",
-      "|       from small pool |     755 KB |       1 MB |       7 MB |       7 MB |\n",
+      "| Non-releasable memory |  405978 KB |    4518 MB |   12674 MB |   12277 MB |\n",
+      "|       from large pool |  403457 KB |    4515 MB |   12652 MB |   12258 MB |\n",
+      "|       from small pool |    2521 KB |       2 MB |      21 MB |      18 MB |\n",
       "|---------------------------------------------------------------------------|\n",
-      "| Allocations           |     176    |     178    |     262    |      86    |\n",
-      "|       from large pool |      42    |      44    |      79    |      37    |\n",
-      "|       from small pool |     134    |     134    |     183    |      49    |\n",
+      "| Allocations           |     586    |     588    |     787    |     201    |\n",
+      "|       from large pool |      72    |      74    |     117    |      45    |\n",
+      "|       from small pool |     514    |     514    |     670    |     156    |\n",
       "|---------------------------------------------------------------------------|\n",
-      "| Active allocs         |     176    |     178    |     262    |      86    |\n",
-      "|       from large pool |      42    |      44    |      79    |      37    |\n",
-      "|       from small pool |     134    |     134    |     183    |      49    |\n",
+      "| Active allocs         |     586    |     588    |     787    |     201    |\n",
+      "|       from large pool |      72    |      74    |     117    |      45    |\n",
+      "|       from small pool |     514    |     514    |     670    |     156    |\n",
       "|---------------------------------------------------------------------------|\n",
-      "| GPU reserved segments |      31    |      31    |      31    |       0    |\n",
-      "|       from large pool |      28    |      28    |      28    |       0    |\n",
-      "|       from small pool |       3    |       3    |       3    |       0    |\n",
+      "| GPU reserved segments |      53    |      53    |      53    |       0    |\n",
+      "|       from large pool |      42    |      42    |      42    |       0    |\n",
+      "|       from small pool |      11    |      11    |      11    |       0    |\n",
       "|---------------------------------------------------------------------------|\n",
-      "| Non-releasable allocs |      13    |      16    |      58    |      45    |\n",
-      "|       from large pool |      10    |      13    |      29    |      19    |\n",
-      "|       from small pool |       3    |       3    |      29    |      26    |\n",
+      "| Non-releasable allocs |      26    |      29    |      85    |      59    |\n",
+      "|       from large pool |      19    |      22    |      39    |      20    |\n",
+      "|       from small pool |       7    |      16    |      46    |      39    |\n",
       "|---------------------------------------------------------------------------|\n",
       "| Oversize allocations  |       0    |       0    |       0    |       0    |\n",
       "|---------------------------------------------------------------------------|\n",
@@ -645,14 +636,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "25033991680\n"
+      "25260513280\n"
      ]
     }
    ],
@@ -662,14 +653,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Thu Jun  8 14:56:24 2023       \n",
+      "Fri Jun  9 14:04:11 2023       \n",
       "+-----------------------------------------------------------------------------+\n",
       "| NVIDIA-SMI 470.57.02    Driver Version: 470.57.02    CUDA Version: 11.4     |\n",
       "|-------------------------------+----------------------+----------------------+\n",
@@ -677,8 +668,8 @@
       "| Fan  Temp  Perf  Pwr:Usage/Cap|         Memory-Usage | GPU-Util  Compute M. |\n",
       "|                               |                      |               MIG M. |\n",
       "|===============================+======================+======================|\n",
-      "|   0  NVIDIA A100-SXM...  On   | 00000000:01:00.0 Off |                    0 |\n",
-      "| N/A   30C    P0    67W / 400W |  27870MiB / 40536MiB |     52%      Default |\n",
+      "|   0  NVIDIA A100-SXM...  On   | 00000000:41:00.0 Off |                    0 |\n",
+      "| N/A   27C    P0   104W / 400W |  28118MiB / 40536MiB |     85%      Default |\n",
       "|                               |                      |             Disabled |\n",
       "+-------------------------------+----------------------+----------------------+\n",
       "                                                                               \n",
@@ -687,7 +678,7 @@
       "|  GPU   GI   CI        PID   Type   Process name                  GPU Memory |\n",
       "|        ID   ID                                                   Usage      |\n",
       "|=============================================================================|\n",
-      "|    0   N/A  N/A   1468901      C   ...da3/envs/torch/bin/python    27867MiB |\n",
+      "|    0   N/A  N/A   1641689      C   ...da3/envs/torch/bin/python    28115MiB |\n",
       "+-----------------------------------------------------------------------------+\n"
      ]
     }
@@ -698,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -708,19 +699,140 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "27884080128\n"
+      "28110601728\n"
      ]
     }
    ],
    "source": [
     "print(torch.cuda.max_memory_allocated())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "snap = 99"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "noise64 = np.load('/hildafs/home/xzhangn/xzhangn/emulator_sr/4-data/2-0/noise/set7/PART_0{}/noise-64.npy'.format(snap))\n",
+    "noise128 = np.load('/hildafs/home/xzhangn/xzhangn/emulator_sr/4-data/2-0/noise/set7/PART_0{}/noise-128.npy'.format(snap))\n",
+    "noise256 = np.load('/hildafs/home/xzhangn/xzhangn/emulator_sr/4-data/2-0/noise/set7/PART_0{}/noise-256.npy'.format(snap))\n",
+    "noise512 = np.load('/hildafs/home/xzhangn/xzhangn/emulator_sr/4-data/2-0/noise/set7/PART_0{}/noise-512.npy'.format(snap))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 6, 64, 64, 64)\n",
+      "(1, 6, 128, 128, 128)\n",
+      "(1, 6, 256, 256, 256)\n",
+      "(1, 6, 512, 512, 512)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(noise64.shape)\n",
+    "print(noise128.shape)\n",
+    "print(noise256.shape)\n",
+    "print(noise512.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(3, 512, 512, 512)\n"
+     ]
+    }
+   ],
+   "source": [
+    "disp = np.load('/hildafs/home/xzhangn/xzhangn/emulator_sr/4-data/2-0/dmo-512/set7/PART_049/disp.npy')\n",
+    "print(disp.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "28110601728\n",
+      "<class 'int'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = torch.cuda.max_memory_allocated()\n",
+    "print(a)\n",
+    "print(type(a))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def bytes2gb(bytes_num):\n",
+    "    return bytes_num / 1024 / 1024 / 1024"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor(26.1800)\n",
+      "<class 'torch.Tensor'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "mem = torch.tensor(bytes2gb(a))\n",
+    "print(mem)\n",
+    "print(type(mem))"
    ]
   },
   {
